--- a/package.json
+++ b/package.json
@@ -13,18 +13,17 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
-    "expo": "~50.0.2",
+    "expo": "~50.0.4",
     "expo-camera": "~14.0.3",
     "expo-file-system": "~16.0.5",
     "expo-image-manipulator": "~11.8.0",
     "expo-image-picker": "~14.7.1",
     "expo-linking": "^6.2.2",
-    "expo-router": "^3.4.4",
+    "expo-router": "~3.4.6",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.7.1",
     "react": "18.2.0",
     "react-native": "0.73.2",
-    "react-native-camera": "^4.2.1",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-image-crop-picker": "^0.40.2",
