--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
+    "axios": "^1.6.7",
     "expo": "~50.0.4",
     "expo-camera": "~14.0.3",
     "expo-file-system": "~16.0.5",
