--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "firebase": "^10.7.1",
     "react": "18.2.0",
     "react-native": "0.73.2",
+    "react-native-background-timer": "^2.4.1",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-image-crop-picker": "^0.40.2",
     "react-native-image-crop-tools": "^1.6.4",
     "react-native-image-picker": "^7.1.0",
+    "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "^3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
@@ -40,6 +42,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "@types/react-native-push-notification": "^8.1.4",
     "typescript": "^5.1.3"
   },
   "private": true
